--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -17,6 +17,8 @@
     "next.config.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
+    "app/**/*.ts",
+    "app/**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
