--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@react-pdf/renderer": "^4.3.2",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.19",
     "@tiptap/extension-placeholder": "^3.14.0",
@@ -77,6 +78,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mdast-util-toc": "^7.1.0",
+    "mdx-bundler": "^10.1.1",
     "motion": "12.23.24",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
@@ -97,6 +99,7 @@
     "remark-gfm": "^4.0.1",
     "shiki": "^3.21.0",
     "sonner": "^1.7.4",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0",
