--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -82,6 +82,7 @@
     "motion": "12.23.24",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "platejs": "^52.0.17",
     "react": "19.2.0",
     "react-confetti": "^6.4.0",
     "react-day-picker": "9.13.0",
