--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,37 @@
     "@hookform/resolvers": "^3.10.0",
     "@marsidev/react-turnstile": "^1.4.1",
     "@phosphor-icons/react": "2.1.10",
+    "@platejs/ai": "^52.0.16",
+    "@platejs/autoformat": "^52.0.11",
+    "@platejs/basic-nodes": "^52.0.1",
+    "@platejs/basic-styles": "^52.0.11",
+    "@platejs/callout": "^52.0.11",
+    "@platejs/caption": "^52.0.11",
+    "@platejs/code-block": "^52.0.11",
+    "@platejs/combobox": "^52.0.15",
+    "@platejs/comment": "^52.0.11",
+    "@platejs/date": "^52.0.11",
+    "@platejs/dnd": "^52.0.11",
+    "@platejs/docx": "^52.0.11",
+    "@platejs/emoji": "^52.0.15",
+    "@platejs/excalidraw": "^52.0.11",
+    "@platejs/floating": "^52.0.11",
+    "@platejs/indent": "^52.0.11",
+    "@platejs/juice": "^52.0.11",
+    "@platejs/layout": "^52.0.11",
+    "@platejs/link": "^52.0.11",
+    "@platejs/list": "^52.0.11",
+    "@platejs/markdown": "^52.0.11",
+    "@platejs/math": "^52.0.11",
+    "@platejs/media": "^52.0.11",
+    "@platejs/mention": "^52.0.15",
+    "@platejs/resizable": "^52.0.11",
+    "@platejs/selection": "^52.0.16",
+    "@platejs/slash-command": "^52.0.15",
+    "@platejs/suggestion": "^52.0.11",
+    "@platejs/table": "^52.0.11",
+    "@platejs/toc": "^52.0.11",
+    "@platejs/toggle": "^52.0.11",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -48,6 +79,7 @@
     "@radix-ui/react-toast": "1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
+    "@radix-ui/react-toolbar": "^1.1.11",
     "@radix-ui/react-tooltip": "1.1.6",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "@react-pdf/renderer": "^4.3.2",
@@ -104,6 +136,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0",
+    "use-file-picker": "^2.1.4",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
