--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -97,6 +97,7 @@
     "@vercel/analytics": "1.3.1",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "@xyflow/react": "^12.10.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
