simplified the pricing model

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -103,6 +103,7 @@
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@xyflow/react": "^12.10.0",
+    "ai": "^6.0.49",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -123,6 +124,7 @@
     "motion": "12.23.24",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "platejs": "^52.0.17",
     "react": "19.2.0",
     "react-confetti": "^6.4.0",
@@ -131,10 +133,13 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-lite-youtube-embed": "^3.3.3",
+    "react-player": "^3.4.0",
     "react-remove-scroll": "^2.7.2",
     "react-resizable-panels": "^2.1.7",
     "react-share": "^5.2.2",
     "react-textarea-autosize": "^8.5.9",
+    "react-tweet": "^3.3.0",
     "recharts": "2.15.4",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.1",
@@ -142,6 +147,7 @@
     "remark": "^15.0.1",
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "shiki": "^3.21.0",
     "sonner": "^1.7.4",
     "stripe": "^20.2.0",
