--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db:generate": "turbo db:generate"
+    "db:generate": "turbo db:generate",
+    "-------------------":"-----------------------",
+    "build:embed": "pnpm build --filter embed"
+
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
