--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push",
+    "db:seed": "turbo db:seed",
+    "db:studio": "turbo db:studio",
     "-------------------": "-----------------------",
     "build:embed": "pnpm build --filter embed"
   },
