Rebanded to Brands instead of Project

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:seed": "turbo db:seed",
     "db:studio": "turbo db:studio",
     "-------------------": "-----------------------",
-    "build:embed": "pnpm build --filter embed"
+    "build:embed": "pnpm build --filter embed",
+    "killport": "npx kill-port 3000 3001 3002 3003"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
