--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -99,6 +99,7 @@
     "@trpc/server": "^11.0.0",
     "@udecode/cn": "^52.0.11",
     "@vercel/analytics": "1.3.1",
+    "@workspace/common": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@xyflow/react": "^12.10.0",
