--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,6 +9,7 @@
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push --force",
+    "db:reset": "tsx scripts/reset-db.ts",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
