--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -99,16 +99,16 @@
     "@trpc/server": "^11.0.0",
     "@udecode/cn": "^52.0.11",
     "@vercel/analytics": "1.3.1",
-    "@workspace/common": "workspace:*",
-    "@workspace/db": "workspace:*",
-    "@workspace/trpc": "workspace:*",
-    "@workspace/ui": "workspace:*",
-    "@workspace/integrations": "workspace:*",
-    "@workspace/email": "workspace:*",
-    "@workspace/notification": "workspace:*",
-    "@workspace/cloudflare": "workspace:*",
     "@workspace/ai": "workspace:*",
     "@workspace/billing": "workspace:*",
+    "@workspace/cloudflare": "workspace:*",
+    "@workspace/common": "workspace:*",
+    "@workspace/db": "workspace:*",
+    "@workspace/email": "workspace:*",
+    "@workspace/integrations": "workspace:*",
+    "@workspace/notification": "workspace:*",
+    "@workspace/trpc": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.49",
     "autoprefixer": "^10.4.20",
@@ -133,6 +133,7 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "platejs": "^52.0.17",
+    "posthog-js": "^1.336.4",
     "react": "19.2.0",
     "react-confetti": "^6.4.0",
     "react-day-picker": "9.13.0",
