--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -8,8 +8,14 @@
     "lint": "eslint . --max-warnings 0",
     "type-check": "tsc --noEmit"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@ai-sdk/gateway": "^3.0.32",
+    "ai": "^6.0.49",
+    "react": "^19.2.4"
+  },
   "devDependencies": {
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.9",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "typescript": "^5.7.2"
