--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -119,7 +119,7 @@
     "date-fns": "4.1.0",
     "drizzle-orm": "^0.36.4",
     "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "8.5.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.27.5",
     "html2canvas-pro": "^1.6.6",
     "input-otp": "1.4.1",
@@ -174,6 +174,7 @@
     "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9.39.1",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
