--- a/package.json
+++ b/package.json
@@ -26,6 +26,23 @@
   "engines": {
     "node": ">=20"
   },
+  "pnpm": {
+    "overrides": {
+      "@radix-ui/react-tabs": "^1.1.2",
+      "@radix-ui/react-direction": "^1.1.1",
+      "@radix-ui/react-context": "^1.1.1",
+      "@radix-ui/react-id": "^1.1.1",
+      "@radix-ui/react-use-layout-effect": "^1.1.1",
+      "@radix-ui/react-presence": "^1.1.2",
+      "@radix-ui/react-compose-refs": "^1.1.1",
+      "@radix-ui/react-primitive": "^2.0.1",
+      "@radix-ui/react-slot": "^1.1.1",
+      "@radix-ui/react-roving-focus": "^1.1.2",
+      "@radix-ui/react-use-controllable-state": "^1.1.1",
+      "@radix-ui/react-use-callback-ref": "^1.1.1",
+      "@radix-ui/react-collection": "^1.1.1"
+    }
+  },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.88"
   }
