--- a/packages/billing/package.json
+++ b/packages/billing/package.json
@@ -4,11 +4,24 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
+    },
+    "./server": {
+      "types": "./src/server.ts",
+      "default": "./src/server.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "dev": "stripe listen --forward-to localhost:3000/api/billing/webhook"
   },
   "dependencies": {
+    "@workspace/db": "workspace:*",
+    "drizzle-orm": "^0.36.4",
     "stripe": "^20.2.0",
     "zod": "^4.3.6"
   },
