--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -35,6 +35,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@workspace/ai": "workspace:*",
     "@workspace/billing": "workspace:*",
     "@workspace/db": "workspace:*",
     "drizzle-orm": "^0.45.1",
