--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,9 +29,12 @@
     "@react-pdf/renderer": "^4.3.2",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.19",
+    "@tiptap/extension-image": "^3.18.0",
+    "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-placeholder": "^3.14.0",
     "@tiptap/extension-task-item": "^3.14.0",
     "@tiptap/extension-task-list": "^3.14.0",
+    "@tiptap/markdown": "^3.18.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
     "@trpc/client": "^11.0.0",
@@ -61,6 +64,7 @@
     "lodash": "^4.17.23",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.563.0",
+    "marked": "^17.0.1",
     "mdast-util-toc": "^7.1.0",
     "mdx-bundler": "^10.1.1",
     "motion": "12.23.24",
