--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,11 +29,13 @@
     "@react-pdf/renderer": "^4.3.2",
     "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.19",
+    "@tiptap/core": "^3.18.0",
     "@tiptap/extension-image": "^3.18.0",
     "@tiptap/extension-link": "^3.18.0",
     "@tiptap/extension-placeholder": "^3.14.0",
     "@tiptap/extension-task-item": "^3.14.0",
     "@tiptap/extension-task-list": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.18.0",
     "@tiptap/markdown": "^3.18.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
