Removed the custom plan

--- a/turbo.json
+++ b/turbo.json
@@ -43,6 +43,9 @@
     },
     "db:seed": {
       "dependsOn": ["^db:seed"]
+    },
+    "db:reset": {
+      "dependsOn": ["^db:reset"]
     }
   }
 }
