--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "turbo db:push",
     "db:seed": "turbo db:seed",
     "db:studio": "turbo db:studio",
+    "db:reset": "turbo db:reset",
     "-------------------": "-----------------------",
     "stripe:listen": "stripe listen --forward-to localhost:3001/api/webhooks/stripe",
     "trigger:dev": "pnpm --filter @workspace/trigger trigger:dev",
