--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,10 +21,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.5",
+    "@scalar/nestjs-api-reference": "^0.3.190",
     "@workspace/db": "workspace:*",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -33,7 +35,8 @@
     "express": "^4.21.2",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
