--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.8",
     "@tanstack/react-query": "^5.90.19",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "@trpc/client": "^11.0.0",
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@workspace/billing": "workspace:*",
     "@workspace/common": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/trpc": "workspace:*",
@@ -29,6 +33,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
