--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "db:seed": "tsx src/seed.ts",
+    "db:seed:mongo-backup": "tsx scripts/seed-mongo-backup.ts",
     "db:migrate": "tsx scripts/migrate.ts",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
