Adds all misssing items on the public website

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,10 +52,14 @@
     "@workspace/db": "workspace:*",
     "@workspace/email": "workspace:*",
     "@workspace/integrations": "workspace:*",
+    "@workspace/monitoring": "workspace:*",
+    "@workspace/newsletter": "workspace:*",
     "@workspace/notification": "workspace:*",
     "@workspace/react-providers": "workspace:*",
     "@workspace/trpc": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "@workspace/trigger": "workspace:*",
+    "@workspace/pdf": "workspace:*",
     "autoprefixer": "^10.4.20",
     "content-collections": "^0.2.1",
     "date-fns": "4.1.0",
