--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,7 +50,6 @@
     "motion": "12.23.24",
     "nanoid": "^5.1.6",
     "next": "^16.1.6",
-    "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-day-picker": "9.13.0",
     "react-dom": "^19.2.3",
@@ -78,6 +77,9 @@
     "eslint": "^9.32.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2"
+  },
+  "peerDependencies": {
+    "next-themes": "^0.4.0"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
