--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/react": "^3.0.51",
     "@ariakit/react": "^0.4.21",
+    "@aws-sdk/client-s3": "^3.980.0",
     "@clerk/nextjs": "^6.36.8",
     "@content-collections/core": "^0.13.1",
     "@content-collections/mdx": "^0.2.2",
@@ -55,11 +56,11 @@
     "@workspace/monitoring": "workspace:*",
     "@workspace/newsletter": "workspace:*",
     "@workspace/notification": "workspace:*",
+    "@workspace/pdf": "workspace:*",
     "@workspace/react-providers": "workspace:*",
+    "@workspace/trigger": "workspace:*",
     "@workspace/trpc": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "@workspace/trigger": "workspace:*",
-    "@workspace/pdf": "workspace:*",
     "autoprefixer": "^10.4.20",
     "content-collections": "^0.2.1",
     "date-fns": "4.1.0",
@@ -73,6 +74,7 @@
     "marked": "^17.0.1",
     "mdast-util-toc": "^7.1.0",
     "mdx-bundler": "^10.1.1",
+    "mjml": "^4.18.0",
     "motion": "12.23.24",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
