Added the commands

--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "db:reset": "turbo db:reset",
     "-------------------": "-----------------------",
     "stripe:listen": "stripe listen --forward-to localhost:3001/api/webhooks/stripe",
+    "--------------------- Emails -----------------------------------------": "-",
+    "emails:preview": "pnpm --filter @workspace/email emails:preview",
+    "--------------Trigger.dev--------------": "--------------------------------",
     "trigger:dev": "pnpm --filter @workspace/trigger trigger:dev",
-    "-------------------2": "-----------------------",
+    "trigger:deploy": "pnpm --filter @workspace/trigger trigger:deploy",
+    "trigger:deploy:staging": "pnpm --filter @workspace/trigger trigger:deploy:staging",
+    "trigger:deploy:production": "pnpm --filter @workspace/trigger trigger:deploy:production",
+    "--------------------- ClickHouse ----------------------------------------": "-",
     "build:embed": "pnpm build --filter embed",
     "killport": "npx kill-port 3000 3001 3002 3003"
   },
