--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -6,7 +6,8 @@
   "types": "./src/index.ts",
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "emails:preview": "npx react-email dev --dir src/templates"
   },
   "dependencies": {
     "@react-email/components": "^0.0.31",
