--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
+    "build": "dotenv -e .env -- turbo build",
+    "dev": "dotenv -e .env -- turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db:generate": "turbo db:generate",
-    "db:push": "turbo db:push",
-    "db:seed": "turbo db:seed",
-    "db:studio": "turbo db:studio",
-    "db:reset": "turbo db:reset",
+    "db:generate": "dotenv -e .env -- turbo db:generate",
+    "db:push": "dotenv -e .env -- turbo db:push",
+    "db:seed": "dotenv -e .env -- turbo db:seed",
+    "db:studio": "dotenv -e .env -- turbo db:studio",
+    "db:reset": "dotenv -e .env -- turbo db:reset",
     "-------------------": "-----------------------",
     "stripe:listen": "stripe listen --forward-to localhost:3001/api/webhooks/stripe",
     "--------------------- Emails -----------------------------------------": "-",
-    "emails:preview": "pnpm --filter @workspace/email emails:preview",
+    "emails:preview": "dotenv -e .env -- pnpm --filter @workspace/email emails:preview",
     "--------------Trigger.dev--------------": "--------------------------------",
-    "trigger:dev": "pnpm --filter @workspace/trigger trigger:dev",
-    "trigger:deploy": "pnpm --filter @workspace/trigger trigger:deploy",
-    "trigger:deploy:staging": "pnpm --filter @workspace/trigger trigger:deploy:staging",
-    "trigger:deploy:production": "pnpm --filter @workspace/trigger trigger:deploy:production",
+    "trigger:dev": "dotenv -e .env -- pnpm --filter @workspace/trigger trigger:dev",
+    "trigger:deploy": "dotenv -e .env -- pnpm --filter @workspace/trigger trigger:deploy",
+    "trigger:deploy:staging": "dotenv -e .env -- pnpm --filter @workspace/trigger trigger:deploy:staging",
+    "trigger:deploy:production": "dotenv -e .env -- pnpm --filter @workspace/trigger trigger:deploy:production",
     "--------------------- ClickHouse ----------------------------------------": "-",
     "build:embed": "pnpm build --filter embed",
     "killport": "npx kill-port 3000 3001 3002 3003"
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
+    "dotenv-cli": "^11.0.0",
     "prettier": "^3.7.4",
     "turbo": "^2.6.3",
     "typescript": "5.7.3"
