udpated all envs

--- a/turbo.json
+++ b/turbo.json
@@ -2,19 +2,54 @@
   "$schema": "https://turbo.build/schema.json",
   "ui": "tui",
   "globalEnv": [
-    "DATABASE_URL",
     "NODE_ENV",
+    "DATABASE_URL",
+    "NEXT_PUBLIC_CLIENT_URL",
+    "NEXT_PUBLIC_API_URL",
+
     "CLERK_SECRET_KEY",
     "CLERK_WEBHOOK_SECRET",
+
+    "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY",
+    "BILLING_STRIPE_SECRET_KEY",
+    "BILLING_STRIPE_WEBHOOK_SECRET",
+
+    "TRIGGER_PROJECT_ID",
+    "TRIGGER_SECRET_KEY",
+
     "TURNSTILE_SECRET_KEY",
     "TURNSILE_SECRET_KEY_CONTACT_FORM",
     "DISABLE_RATE_LIMIT",
-    "BILLING_STRIPE_SECRET_KEY",
-    "BILLING_STRIPE_WEBHOOK_SECRET",
-    "NEXT_PUBLIC_CLIENT_URL",
+
+    "R2_ACCOUNT_ID",
+    "R2_ACCESS_KEY_ID",
+    "R2_SECRET_ACCESS_KEY",
+    "R2_BUCKET",
+
+    "EMAIL_FROM",
+    "EMAIL_FEEDBACK_INBOX",
+    "EMAIL_REPLY_TO",
+    "EMAIL_CONTACT_FORM_TO",
+    "EMAIL_RESEND_API_KEY",
+
+    "MONITORING_SENTRY_ORG",
+    "MONITORING_SENTRY_PROJECT",
+    "MONITORING_SENTRY_AUTH_TOKEN",
+    "SENTRY_SUPPRESS_TURBOPACK_WARNING",
+
+    "SLACK_WEBHOOK_URL",
+    "AI_GATEWAY_API_KEY",
+    "NEWSLETTER_SEGMENT_ID",
+
     "INTEGRATION_ENCRYPTION_KEY",
     "INTEGRATION_GOOGLE_CLIENT_ID",
-    "INTEGRATION_GOOGLE_CLIENT_SECRET"
+    "INTEGRATION_GOOGLE_CLIENT_SECRET",
+    "INTEGRATION_SERPAPI_API_KEY",
+    "INTEGRATION_REDDIT_CLIENT_ID",
+    "INTEGRATION_REDDIT_CLIENT_SECRET",
+
+    "UPSTASH_REDIS_REST_URL",
+    "UPSTASH_REDIS_REST_TOKEN"
   ],
   "tasks": {
     "build": {
