--- a/.env.example
+++ b/.env.example
@@ -126,6 +126,7 @@ UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
 # -------------------------------------------
-# Feature Flags
+# Feature Flags (DEPRECATED - moved to admin_settings table)
 # -------------------------------------------
-NEXT_PUBLIC_FLAG_IS_WAITLIST=true
+# NEXT_PUBLIC_FLAG_IS_WAITLIST is now controlled via /control/settings
+# Use the "Waitlist Mode" toggle in admin settings instead
